if (CMAKE_VERSION VERSION_LESS "3.1")
  if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
  endif ()
else ()
  set (CMAKE_CXX_STANDARD 11)
endif ()

cmake_minimum_required(VERSION 3.0)
project( OdometryPipeline )
find_package( dlib REQUIRED )
find_package( OpenCV REQUIRED )
find_package( Ceres REQUIRED )
include_directories( include ${OpenCV_INCLUDE_DIRS} ${CERES_INCLUDE_DIRS} )
add_executable( OdometryPipeline main.cpp CeresBundleAdjustment.cpp Feature.cpp Feature3D.cpp Frame.cpp kNNFeatureMatcher.cpp OpenCVEPnPSolver.cpp OpenCVFASTFeatureExtractor.cpp OpenCVFivePointTri.cpp OpenCVGoodFeatureExtractor.cpp OpenCVLucasKanadeFM.cpp ProjectionResidual.cpp ShiTomasiFeatureExtractor.cpp OdometryPipeline.cpp )
target_link_libraries( OdometryPipeline ${OpenCV_LIBS} dlib::dlib ${CERES_LIBRARIES} )